fixed min width when not centered

--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -414,7 +414,7 @@
 @agate-item-height-large:             72px;
 @agate-item-inline-content-max-width: 420px;
 @agate-item-itemcontent-line-height:  inherit;
-@agate-item-inline-notcentered-itemcontent-min-width: 420px;
+@agate-item-inline-notcentered-itemcontent-min-width: initial;
 @agate-item-inline-max-width:         516px;
 @agate-item-inline-min-width:         initial;
 @agate-item-label-font-size:          inherit;
