--- a/styles/variables-silicon.less
+++ b/styles/variables-silicon.less
@@ -234,6 +234,7 @@
 @agate-item-small-itemcontent-line-height: 42px;
 @agate-item-inline-max-width:         700px;
 @agate-item-inline-min-width:         480px;
+@agate-item-inline-notcentered-itemcontent-min-width: 420px;
 
 // Keypad
 // ---------------------------------------
